# Visual-Inertial-Odometry

./: README.md  cpu.Dockerfile  docker-compose.yml  gpu.Dockerfile  launch-visual-inertial-odometry-gpu.sh
environment/: vio-analytics.yml
image/etc/: apt-fast.conf  hosts
image/etc/apt/: sources.list
image/workspace/: disable-conda.sh  enable-conda.sh
installers/: download-ceres-source.sh  download-opencv3-source.sh
workspace/assignments/01-introduction/: README.md
workspace/assignments/01-introduction/cmake-practice/backup/cmake/02-basic-project-organization/: CMakeLists.txt  COPYRIGHT  README.md  run.sh
workspace/assignments/01-introduction/cmake-practice/backup/cmake/02-basic-project-organization/doc/: CMake-Practice.txt
workspace/assignments/01-introduction/cmake-practice/backup/cmake/02-basic-project-organization/src/: CMakeLists.txt  main.cpp
workspace/assignments/01-introduction/cmake-practice/backup/cmake/03-build-libraries/lib/: CMakeLists.txt  hello.cpp  hello.h
workspace/assignments/01-introduction/hello-slam/: CMakeLists.txt  useHello.cpp
workspace/assignments/01-introduction/hello-slam/Release/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  libhello.so.1.0
workspace/assignments/01-introduction/hello-slam/src/: hello.cpp
workspace/assignments/02-kinematics-in-3D-space/workspace/: CMakeLists.txt
workspace/assignments/02-kinematics-in-3D-space/workspace/01-solve-linear-equations/: solve-linear-equations  solve-linear-equations.cpp
workspace/assignments/02-kinematics-in-3D-space/workspace/02-coordinate-transform/: coordinate-transform  coordinate-transform.cpp
workspace/assignments/03-lie-group-and-lie-algebra/workspace/: CMakeLists.txt
workspace/assignments/03-lie-group-and-lie-algebra/workspace/01-draw-trajectory/: draw-trajectory  draw_trajectory.cpp
workspace/assignments/03-lie-group-and-lie-algebra/workspace/02-error-analysis/: error-analysis  error-analysis.cpp
workspace/assignments/04-camera-calibration/workspace/: CMakeLists.txt
workspace/assignments/04-camera-calibration/workspace/01-undistort-image/: undistort-image  undistort_image.cpp
workspace/assignments/04-camera-calibration/workspace/02-stereo-vision/: disparity.cpp  stereo-vision
workspace/assignments/04-camera-calibration/workspace/03-gaussian-newton-estimation/: gaussian-newton  gaussnewton.cpp
workspace/assignments/04-camera-calibration/workspace/04-intro-to-ceres/: intro-to-ceres  intro-to-ceres.cpp
workspace/assignments/04-camera-calibration/workspace/05-intro-to-g2o/: intro-to-g2o  intro-to-g2o.cpp
workspace/assignments/05-frontend-feature-matching/: .gitignore  CMakeLists.txt  README.md
workspace/assignments/05-frontend-feature-matching/01-orb-feature-matching/: compute_orb.cpp
workspace/assignments/05-frontend-feature-matching/02-essential-matrix-to-pose/: E2Rt.cpp
workspace/assignments/05-frontend-feature-matching/03-pnp/: GN-BA.cpp
workspace/assignments/05-frontend-feature-matching/04-icp/: G-N.cpp  SVD.cpp
workspace/assignments/06-frontend-direct-method/: CMakeLists.txt  README.md
workspace/assignments/06-frontend-direct-method/01-optical-flow/: optical_flow.cpp
workspace/assignments/06-frontend-direct-method/02-direct-method/: direct_method.cpp
workspace/assignments/06-frontend-direct-method/03-disparity-map/: disparity_map.cpp
workspace/assignments/07-backend-optimization/: CMakeLists.txt  README.md
workspace/assignments/07-backend-optimization/01-bal-g2o/: .gitignore  README.md  bal-jacobian.ipynb  bal-jacobian.yaml
workspace/assignments/07-backend-optimization/01-bal-g2o/include/: bal.hpp
workspace/assignments/07-backend-optimization/01-bal-g2o/src/: bal.cpp  bal_g2o.cpp
workspace/assignments/07-backend-optimization/02-direct-ba/: direct-ba-jacobian.ipynb  direct_ba.cpp
workspace/assignments/07-backend-optimization/02-direct-ba/include/: camera.hpp  graph.hpp  landmark.hpp
workspace/assignments/07-backend-optimization/data/01-bal/: download.sh
workspace/assignments/07-backend-optimization/data/02-direct-ba/: points.txt
workspace/assignments/08-close-loop-detection/: CMakeLists.txt  README.md
workspace/assignments/08-close-loop-detection/01-dbow-demo/: dbow_demo.cpp
workspace/assignments/11-vio-introduction/: CMakeLists.txt  README.md
workspace/assignments/11-vio-introduction/01-rotation-update/: rotation_update.cpp
workspace/assignments/14-sliding-window/src/: CMakeLists.txt  hessian_nullspace_test.cpp
workspace/assignments/15-vio-backend/: CMakeLists.txt  README.md
workspace/assignments/15-vio-backend/app/: TestMonoBA.cpp
workspace/assignments/15-vio-backend/backend/: problem.cc
workspace/assignments/16-visual-frontend/: CMakeLists.txt  README.md  triangulate.cpp
workspace/assignments/16-visual-frontend/doc/01-triangulation/: evaluation-results.csv
workspace/assignments/16-visual-frontend/scripts/: visualize.py
workspace/assignments/16-visual-frontend/src/: triangulate.cpp
workspace/assignments/17-vins-initialization/simulator/: CMakeLists.txt
workspace/assignments/17-vins-initialization/simulator/include/: CSVWriter.h  param.h  utilities.h
workspace/assignments/17-vins-initialization/simulator/src/: main.cpp  param.cpp  utilities.cpp
workspace/assignments/17-vins-initialization/vins-mono/: CMakeLists.txt
workspace/assignments/17-vins-initialization/vins-mono/cmake_modules/: FindCSparse.cmake
workspace/assignments/17-vins-initialization/vins-mono/config/: vio_simulation.yaml
workspace/assignments/17-vins-initialization/vins-mono/include/: System.h
workspace/assignments/17-vins-initialization/vins-mono/include/utility/: CSVParser.h
workspace/assignments/17-vins-initialization/vins-mono/src/: System.cpp  estimator.cpp  parameters.cpp
workspace/assignments/17-vins-initialization/vins-mono/test/: run_vio_simulation.cpp
workspace/assignments/msfcomp/: CMakeLists.txt  README.md
workspace/assignments/msfcomp/data/: A.txt  B.txt
workspace/assignments/msfcomp/include/: record.hpp
workspace/assignments/msfcomp/src/: main.cpp  record.cpp
(+81 files in other folders)
