CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

# project name:
PROJECT(HELLO_SLAM)

# default build mode:
SET(CMAKE_BUILD_TYPE Release)

# libhello:
SET(LIB_SRC_LIST src/hello.cpp)

ADD_LIBRARY(hello_shared SHARED ${LIB_SRC_LIST})

SET_TARGET_PROPERTIES(hello_shared PROPERTIES OUTPUT_NAME "hello")
SET_TARGET_PROPERTIES(hello_shared PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(hello_shared PROPERTIES VERSION 1.0 SOVERSION 1)

INSTALL(
  TARGETS hello_shared
  LIBRARY DESTINATION lib
)

INSTALL(
  DIRECTORY include/
  DESTINATION include
)

# executable:
SET(SRC_LIST useHello.cpp)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

INCLUDE_DIRECTORIES(include)

ADD_EXECUTABLE(sayhello ${SRC_LIST} ${LIB_SRC_LIST})
