SET(LIBHELLO_SRC hello.cpp)

SET(LIBRARY_OUT_PATH ${PROJECT_BINARY_DIR}/lib)

ADD_LIBRARY(hello_shared SHARED ${LIBHELLO_SRC})
ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})

SET_TARGET_PROPERTIES(hello_shared PROPERTIES OUTPUT_NAME "hello")
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")

SET_TARGET_PROPERTIES(hello_shared PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(hello_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES(hello_shared PROPERTIES VERSION 1.0 SOVERSION 1)

INSTALL(
  TARGETS hello_shared hello_static
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
)

INSTALL(
  FILES hello.h
  DESTINATION include/hello
)
